--- a/AGAbout.html
+++ b/AGAbout.html
@@ -34,7 +34,7 @@
       <div class = "tableRow">
         <section id = "sidebar" class = "layout tableCell">
           <img src = "AGImages/joanneaboutme.jpg" alt = "Joanne M. Flood" width = "50%">
-          <p></p>
+          <p>Joanne M. Flood</p>
         </section>
         <section id = "main" class = "layout tableCell">
           <p><strong>Joanne M. Flood</strong>, CPA, is an author and independent consultant on accounting and auditing technical topics and e-learning. She has experience as an auditor in both an international ﬁrm and a local ﬁrm and worked as a senior manager in the AICPA’s Professional Development group. She received her MBA Summa Cum Laude in Accounting from Adelphi University and her bachelor’s degree in English from Molloy College.</p><br>
